home/k8s/cluster-apps/media/jellyfin/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: le-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/icon: "https://avatars.githubusercontent.com/u/45698031"
  namespace: media
  name: jellyfin
  labels:
    app: jellyfin
spec:
  rules:
    - host: jellyfin.waltr.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
  tls: # < placing a host in the TLS config will indicate a certificate should be created
    - hosts:
      - jellyfin.waltr.tech
      secretName: jellyfinwaltrtech-cert # < cert-manager will store the created certificate in this secret
